// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="container md undefined"
  data-testid="Button"
  type="button"
>
  <h4
    data-testid="Label"
  >
    <span>
      Button
    </span>
  </h4>
</button>
`;

exports[`matches snapshot 2`] = `
<button
  className="container lg undefined"
  data-testid="Button"
  type="button"
>
  <h2
    data-testid="Label"
  >
    <span>
      Button
    </span>
  </h2>
</button>
`;

exports[`matches snapshot 3`] = `
<button
  className="container sm undefined"
  data-testid="Button"
  type="button"
>
  <p
    data-testid="Label"
  >
    <span>
      Button
    </span>
  </p>
</button>
`;

exports[`matches snapshot 4`] = `
<button
  className="container xl undefined"
  data-testid="Button"
  type="button"
>
  <h1
    data-testid="Label"
  >
    <span>
      Button
    </span>
  </h1>
</button>
`;
